# macro-news

./: .env.example  .gitignore  AGENTS.md  ASSIGNMENT_AUDIT.md  CHANGELOG.md  DECISIONS.md  PLAN.md  README.md  costs.md  memo.md  pyproject.toml
.github/workflows/: daily-brief-dry-run.yml  daily-brief-live-dry-run.yml  daily-brief-manual-send.yml  daily-brief-scheduled-send-proof.yml  daily-brief-scheduled-send-test.yml  github-scheduler-smoke-test.yml
docs/: scheduling.md
inputs/feedback/: README.md  daily_feedback.example.csv
inputs/portfolio/: README.md  positions.csv  positions.example.csv
scheduling/: com.macro-news.daily-brief.plist.example
scripts/: install_launchd_test_send.sh  install_launchd_weekday_hk.sh  run_daily_brief.sh
src/macro_news/: __init__.py  calendar_data.py  cli.py  config.py  costing.py  emailer.py  feedback.py  llm.py  market_data.py  model_compare.py  narrative_rules.py  portfolio.py  render.py  runner.py  sample_data.py  theme_data.py  topic_selection.py
tests/: test_sample_run.py
