[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-news"
version = "0.1.0"
description = "Daily Macro Brief Agent scaffold for a case study assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
macro-news = "macro_news.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

